--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "colors": "^1.4.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "inquirer": "^9.1.4"
   }
 }
