Program finished, hist and temp working

--- a/example.env
+++ b/example.env
@@ -1,2 +1,4 @@
-# I used mapBox to generate a token. This one doesn't work
-MAPBOX_KEY=pk.asdiaidmnaisdnaiakdmakm
+# I used MapBox to generate a token.
+MAPBOX_KEY=
+# I used OpenWeather to generate a key.
+OPENWEATHER_KEY=
